--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-to-print": "^2.14.11"
+    "react-to-print": "^2.14.11",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
