--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.8",
+    "@mui/x-date-pickers": "^6.0.0-beta.3",
     "@tanstack/react-query-devtools": "^4.24.4",
+    "date-fns": "^2.29.3",
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
