--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "pontaj",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "sideEffects": false,
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "remix build",
+    "dev": "remix dev",
+    "start": "cross-env NODE_ENV=production netlify dev",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.4.9",
+    "@chakra-ui/react": "^2.5.0",
     "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.8",
-    "@mui/x-date-pickers": "^6.0.0-beta.3",
-    "@tanstack/react-query-devtools": "^4.24.4",
-    "date-fns": "^2.29.3",
-    "framer-motion": "^9.0.1",
+    "@netlify/functions": "^1.3.0",
+    "@remix-run/netlify": "^1.13.0",
+    "@remix-run/node": "^1.13.0",
+    "@remix-run/react": "^1.13.0",
+    "cross-env": "^7.0.3",
+    "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
-    "react-to-print": "^2.14.11",
-    "zustand": "^4.3.2"
+    "react-to-print": "^2.14.11"
   },
   "devDependencies": {
-    "@types/node": "^18.11.19",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "@remix-run/dev": "^1.13.0",
+    "@remix-run/eslint-config": "^1.13.0",
+    "@remix-run/serve": "^1.13.0",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "eslint": "^8.27.0",
+    "typescript": "^4.8.4"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
