--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-to-print": "^2.14.11"
   },
   "devDependencies": {
