--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@remix-run/node": "^1.13.0",
     "@remix-run/react": "^1.13.0",
     "cross-env": "^7.0.3",
+    "firebase": "^9.17.1",
+    "firebase-admin": "^11.5.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-to-print": "^2.14.11"
+    "react-to-print": "^2.14.11",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.13.0",
