--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.5.0",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
+    "@material-tailwind/react": "^1.4.2",
     "@netlify/functions": "^1.3.0",
     "@remix-run/netlify": "^1.13.0",
     "@remix-run/node": "^1.13.0",
